# miniclue-tauri

./: .gitignore  .npmrc  .prettierignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MACOS_DYLIB_FIX.md  README.md  biome.jsonc  components.json  eslint.config.js  index.html  opencode.json  package.json  pnpm-lock.yaml  vite.config.ts
.claude/: settings.json
.github/workflows/: main.yml
docs/contributors/: README.md  architecture.md  database.md  dev-commands.md  pipeline.md  tauri-ipc.md
docs/users/: README.md  getting-started.md  storage-and-privacy.md  using-miniclue.md
public/fonts/: fonts.css
src/: index.css  main.tsx  polyfills.ts  routeTree.gen.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20250101000000_initial_schema.sql  20260214090007_add_screenshot_path_to_pages.sql  20260310000000_add_embedding_model.sql  20260320000001_add_indexes.sql
src-tauri/resources/: catalog.json
src-tauri/src/: bindings.rs  catalog.rs  config.rs  error.rs  hardware.rs  lib.rs  state.rs  validation.rs
src-tauri/src/commands/: chat.rs  document.rs  folder.rs  hardware.rs  local_model.rs  mod.rs  user.rs
src-tauri/src/db/: chat.rs  document.rs  embedding.rs  folder.rs  migrations.rs  mod.rs
src-tauri/src/models/: chat.rs  document.rs  folder.rs  mod.rs  user.rs
src-tauri/src/pipeline/: chunker.rs  embedder.rs  mod.rs  orchestrator.rs  pdf_parser.rs
src-tauri/src/rag/: context_builder.rs  mod.rs  prompts.rs  query_rewriter.rs  retriever.rs
src-tauri/src/services/: llama_server.rs  llm.rs  mod.rs  model_manager.rs  secret_store.rs  validators.rs
src/components/: download-progress-popup.tsx
src/components/assistant-ui/: chat-selector.tsx  markdown-text.tsx  page-link.tsx  (+9 more)
src/hooks/: use-local-model-catalog.ts  use-queries.ts
src/lib/: bindings.ts  model-catalog.ts  model-context.tsx  page-navigation-context.tsx  remark-page-citations.ts  remark-slide-citations.ts  slide-navigation-context.tsx  tauri.ts  types.ts  utils.ts
src/routes/: __root.tsx  _app.tsx  onboarding.tsx
(+73 files in other folders)
