[package]
name = "miniclue"
version = "0.1.0"
description = "MiniClue - Read and chat with any document, privately"
authors = ["MiniClue"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
flate2 = "1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
tar = "0.4"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "macros", "migrate"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
log = "0.4"
lazy_static = "1.4"
# Type safety with Tauri Specta
specta = "2.0.0-rc.22"
tauri-specta = { version = "2.0.0-rc.21", features = ["typescript"] }
specta-typescript = "0.0.9"
# PDF processing
pdf-extract = "0.7"
pdfium-render = "0.8"
# Tokenization for chunking
tiktoken-rs = "0.6"
# Async utilities
async-stream = "0.3"
# Base64 encoding for image data URIs
base64 = "0.22"
# Hardware detection
sysinfo = { version = "0.33", default-features = false, features = ["system", "disk"] }
wgpu = { version = "22", default-features = false, features = ["wgsl"] }

[profile.release]
# Remove debug symbols to reduce binary size
strip = true
# Enable Link Time Optimization for better performance
lto = true
# Use a single codegen unit for better optimization (slower compile, faster runtime)
codegen-units = 1
# Optimize for size (can also use 3 for speed)
opt-level = "z"
